# top-k-densest-overlapping-subgraphs-c-

./: CMakeLists.txt  README.md
res/: dbbox_Latin-America.edgelist  dbbox_Latin-America.labels  dbbox_Middle-East.edgelist  dbbox_Middle-East.labels
src/: DOS.h  DOSComputer.h  Distances.h  Graph.h  GraphTranslator.h  MinHeap.h  Peeler.h  main.cpp  utils.cpp
src/datastructure/: VerticesByDegreeQueue.h  VerticesLinkedList.h
src/priorityQueue/: BatchMinHeap.h  LinearQueue.h  MinHeap.h
